2001-04-03  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	The following changes make the documentation more consistent.
	
	* rdelim.c (scm_write_line), posix.c (scm_utime), ports.c
	(scm_seek), net_db.c (scm_inet_aton, scm_inet_ntoa),
	(scm_inet_netof, scm_lnaof, scm_inet_makeaddr), ioext.c
	(scm_ftell): Changed @smalllisp ... @end smalllisp to @lisp
	... @end lisp.

	* vports.c (scm_make_soft_port), version.c (scm_version), unif.c
	(scm_array_dimensions, scm_make_shared_array),
	(scm_transpose_array, scm_enclose_array, scm_bit_count_star),
	throw.c (scm_catch), struct.c (scm_make_vtable_vtable), strop.c
	(scm_string_rindex, scm_string_index, scm_substring_fill_x),
	(scm_string_null_p), strings.c (scm_read_only_string_p), root.c
	(scm_call_with_dynamic_root), ramap.c (scm_array_index_map_x),
	posix.c (scm_mknod), numbers.c (scm_logtest, scm_logbit_p),
	macros.c (scm_makmmacro), list.c (scm_append), environments.c
	(scm_environment_fold), dynwind.c (s_scm_dynamic_wind): Changed
	@example ... @end example to @lisp ... @end lisp.

	* weaks.c (scm_weak_vector): Corrected docstring.

	* hashtab.c (scm_hashq_ref, scm_hashq_set_x, scm_hashq_remove_x),
	(scm_hashv_ref, scm_hashv_set_x, scm_hashv_remove_x),
	(scm_hash_ref, scm_hash_set_x, scm_hash_remove_x, scm_hashx_ref),
	(scm_hashx_set_x, scm_hashx_get_handle),
	(scm_hashx_create_handle_x), regex-posix.c (scm_make_regexp),
	(scm_regexp_exec, scm_regexp_p), numbers.c (scm_logtest),
	vectors.c (scm_vector_fill_x), strings.c
	(scm_make_shared_substring), symbols.c (scm_string_to_symbol),
	objprop.c (scm_set_object_properties_x):
	(scm_set_object_property_x), throw.c (scm_catch, scm_lazy_catch),
	strports.c (scm_call_with_input_string), ports.c
	(scm_truncate_file), ioext.c (scm_ftell), ports.c (scm_seek),
	list.c (scm_append_x), dynwind.c (scm_dynamic_wind), error.c
	(scm_error_scm), vports.c (scm_make_soft_port), weaks.c
	(scm_make_weak_vector,scm_weak_vector_p),